AM_CFLAGS = $(PACKAGE_CFLAGS) -I$(top_srcdir)/include

noinst_LTLIBRARIES = libbabeltrace1tb_types.la

libbabeltrace1tb_types_la_SOURCES = \
	array.c \
	enum.c \
	float.c \
	integer.c \
	sequence.c \
	string.c \
	struct.c \
	variant.c \
	types.c

libbabeltrace1tb_types_la_LDFLAGS = $(LT_NO_UNDEFINED)
